tools/flowc/tests/errors/error26.flow
import tools/flowc/tests/errors/error26a;

main() {
	
}
